# scan-unused-requirements

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scan.py  setup.cfg
.github/workflows/: run-tests.yml
docs/: build-publish.md
src/scanreq/: __main__.py  scanner.py
tests/: test_scanner.py
